<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTelefono"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/_telefono"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/lblatitud"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/textLatitud"
        android:text="@string/latitud"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/lbLongitud"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/textLongitud"
        android:text="@string/longitud"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblatitud"
        app:layout_constraintVertical_bias="0.122" />

    <TextView
        android:id="@+id/lbPrecision"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/textPrecision"
        android:text="@string/precision"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbLongitud"
        app:layout_constraintVertical_bias="0.138" />

    <TextView
        android:id="@+id/lbAltitud"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/textAltitud"
        android:text="@string/altitud"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbPrecision"
        app:layout_constraintVertical_bias="0.193" />

    <TextView
        android:id="@+id/textLatitud"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:background="#7E86E0FC"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toEndOf="@+id/lblatitud"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/textLongitud"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:background="#7E86E0FC"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toEndOf="@+id/lbLongitud"
        app:layout_constraintTop_toBottomOf="@+id/textLatitud"
        app:layout_constraintVertical_bias="0.122" />

    <TextView
        android:id="@+id/textPrecision"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:background="#7E86E0FC"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toEndOf="@+id/lbPrecision"
        app:layout_constraintTop_toBottomOf="@+id/textLongitud"
        app:layout_constraintVertical_bias="0.138" />

    <TextView
        android:id="@+id/textAltitud"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:background="#7E86E0FC"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toEndOf="@+id/lbAltitud"
        app:layout_constraintTop_toBottomOf="@+id/textPrecision"
        app:layout_constraintVertical_bias="0.193" />

    <ImageButton
        android:id="@+id/buttonEnviarSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/botonsms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTelefono"
        app:layout_constraintVertical_bias="0.763"
        app:srcCompat="@drawable/sms" />

</androidx.constraintlayout.widget.ConstraintLayout>